updated background image and removed ActionBar from Login, SignUp and ForgotApassword activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="success_message">Message Sent!</string>
     <string name="error_sending_message">There was an error sending your message.  Please try again.</string>
     <string name="title_activity_view_image">Ribbit</string>
+    <string name="content_desc_background">Ribbit Frog Background Image</string>
 
 </resources>
