--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="username_hint">Username (Case Sensitive)</string>
     <string name="password_hint">Password</string>
-    <string name="login_button_label">Login</string>
+    <string name="login_button_label">SIGN IN</string>
     <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
     <string name="title_activity_sign_up">Ribbit SignUp</string>
     <string name="email_hint">Email</string>
