--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="email_hint">Email</string>
-    <string name="sign_up_button_label">Sign Up</string>
+    <string name="sign_up_button_label">SIGN UP</string>
     <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
     <string name="signup_error_title">Oops!</string>
     <string name="login_error_message">Please make sure you enter a username and password!</string>
@@ -22,7 +22,7 @@
     <string name="title_activity_forgot">Forgot Password</string>
     <string name="action_settings">Settings</string>
     <string name="forgot_password_hint">Enter Your Email To Reset Your Password</string>
-    <string name="reset_password_button_label">Reset Password</string>
+    <string name="reset_password_button_label">RESET PASSWORD</string>
     <string name="reset_password_error_message">Please make sure you enter a valid email address!</string>
     <string name="reset_password_error_title">Oops!</string>
     <string name="reset_password_success_message">An email was successfully sent with reset instructions</string>
@@ -56,5 +56,7 @@
     <string name="title_activity_view_image">Ribbit</string>
     <string name="content_desc_background">Ribbit Frog Background Image</string>
     <string name="subtitle">A Treehouse Project</string>
+    <string name="cancel_button_label">CANCEL</string>
+    <string name="content_desc_button_divider">Button Divider</string>
 
 </resources>
