- setting the background color for the inbox  - adding margins to ListViews

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,6 @@
     <string name="subtitle">A Treehouse Project</string>
     <string name="cancel_button_label">CANCEL</string>
     <string name="content_desc_button_divider">Button Divider</string>
+    <string name="content_desc_message_icon">Message Icon</string>
 
 </resources>
