--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="cancel_button_label">CANCEL</string>
     <string name="content_desc_button_divider">Button Divider</string>
     <string name="content_desc_message_icon">Message Icon</string>
+    <string name="content_desc_user_avatar">User Avatar</string>
 
 </resources>
