- Created a Common GridView Layout Friends and EditFriends and displaying Checkmarks in the EditFriends section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,5 +60,7 @@
     <string name="content_desc_button_divider">Button Divider</string>
     <string name="content_desc_message_icon">Message Icon</string>
     <string name="content_desc_user_avatar">User Avatar</string>
+    <string name="content_desc_user_checkmark">User checkmark</string>
+
 
 </resources>
